# meshek-ml

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  fly.toml  pyproject.toml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  v1.0-MILESTONE-AUDIT.md  v1.1-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.1-LEARNINGS.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.planning/seeds/: SEED-001-gcp-native-storage-migration.md
academic/: APPROACH.md  compass_artifact_wf-54c46211-802c-439b-9b56-21678c3ebbbc_text_markdown.md
configs/experiment/: sim_small.yaml
configs/federated/: fedavg.yaml  fedprox.yaml
configs/forecasting/: lightgbm.yaml  prophet.yaml
configs/optimization/: newsvendor.yaml  ppo.yaml
configs/recommendation/: category_defaults.yaml
configs/simulation/: default.yaml  merchant_archetypes.yaml  seasonality.yaml
docs/: deploy-cloudrun.md  v0.8-meshek-ml-handoff.md
notebooks/: 01_simulation_eda.ipynb  02_demand_forecasting.ipynb  03_inventory_optimization.ipynb  04_federated_learning.ipynb  colab_quickstart.ipynb
scripts/: bootstrap-cloudrun.sh  deploy-cloudrun.sh  run_demo.py  run_federated.py  run_forecast.py  run_optimization.py  run_simulation.py  train-and-publish-model.sh
src/meshek_ml/: __init__.py
tests/: conftest.py
tests/common/: test_io.py
tests/deploy/: test_cloudrun_smoke.py
tests/federated/: test_partitioning.py
tests/forecasting/: test_evaluation.py  test_features.py  test_pipeline.py  (+1 more)
(+235 files in other folders)
