[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meshek-ml"
version = "0.1.0"
description = "Federated inventory optimization for perishable goods at small greengrocers"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"

dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.11",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "pydantic>=2.0",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "pyarrow>=14.0",
]

[project.optional-dependencies]
simulation = [
    "Faker>=20.0",
]
forecasting = [
    "u8darts[all]>=0.28",
    "lightgbm>=4.0",
    "xgboost>=2.0",
]
optimization = [
    "gymnasium>=0.29",
    "stable-baselines3[extra]>=2.2",
    "torch>=2.1",
]
federated = [
    "flwr>=1.7",
    "torch>=2.1",
]
tracking = [
    "trackio>=0.3",
]
demo = [
    "streamlit>=1.30",
]
service = [
    "fastapi>=0.135,<0.136",
    "httpx>=0.27",
    "joblib>=1.3",
    "pyyaml>=6.0",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "pre-commit>=3.5",
    "ipykernel>=6.25",
    "nbstripout>=0.6",
]
all = [
    "meshek-ml[simulation,forecasting,optimization,federated,tracking,demo,service,dev]",
]

[tool.hatch.build.targets.wheel]
packages = ["src/meshek_ml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests",
]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["meshek_ml"]
